--- a/components/_components.contact-block.scss
+++ b/components/_components.contact-block.scss
@@ -70,7 +70,7 @@ $ico-margin: 0.9em;
     }
     .button-block {
         .btn {
-            margin: 0;
+            margin: 0 0 1em 0;
         }
     }
     .email-block {
